remove express and local support, ajv validators and middleware
TODO: improve the scoring algorithm
